--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "aptos move compile --skip-fetch-latest-git-deps",
+    "build": "aptos move compile --skip-fetch-latest-git-deps",
     "deploy": "aptos move publish",
     "test": "aptos move test --package-dir sources/gaming --skip-fetch-latest-git-deps"
   },
