--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "movement-gaming-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -17,14 +17,26 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "update": "cd ../model && yarn build && cd ../api && yarn add file:../model"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch": "^3.616.0",
+    "@aws-sdk/client-secrets-manager": "^3.529.1",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "axios": "^1.7.2",
+    "ioredis": "^5.4.1",
+    "js-yaml": "^4.1.0",
+    "movement-gaming-model": "file:../model",
+    "mysql2": "^3.10.3",
+    "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@golevelup/ts-jest": "^0.4.0",
