--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "update": "cd ../model && yarn build && cd ../api && yarn add file:../model"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.26.0",
     "@aws-sdk/client-cloudwatch": "^3.616.0",
     "@aws-sdk/client-secrets-manager": "^3.529.1",
     "@nestjs/common": "^10.0.0",
