--- a/keeper/package.json
+++ b/keeper/package.json
@@ -17,14 +17,29 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "update": "cd ../model && yarn build && cd ../keeper && yarn add file:../model"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.26.0",
+    "@aws-sdk/client-cloudwatch": "^3.616.0",
+    "@aws-sdk/client-secrets-manager": "^3.616.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "bignumber.js": "^9.1.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "class-validator-extended": "^4.0.0",
+    "ioredis": "^5.4.1",
+    "movement-gaming-model": "file:../model",
+    "mysql2": "^3.10.3",
+    "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@golevelup/ts-jest": "^0.4.0",
@@ -72,6 +87,9 @@
       "json",
       "ts"
     ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/$1"
+    },
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
@@ -81,6 +99,7 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testTimeout": 60000
   }
 }
