--- a/keeper/package.json
+++ b/keeper/package.json
@@ -28,6 +28,7 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.1.0",
     "@nestjs/typeorm": "^10.0.2",
     "bignumber.js": "^9.1.2",
     "class-transformer": "^0.5.1",
