--- a/api/package.json
+++ b/api/package.json
@@ -30,10 +30,16 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.7.2",
+    "bignumber.js": "^9.1.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "class-validator-extended": "^4.0.0",
+    "crypto-js": "^4.2.0",
     "ioredis": "^5.4.1",
     "js-yaml": "^4.1.0",
     "movement-gaming-model": "file:../model",
     "mysql2": "^3.10.3",
+    "nanoid": "3",
     "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -85,6 +91,9 @@
       "json",
       "ts"
     ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/$1"
+    },
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
