--- a/keeper/package.json
+++ b/keeper/package.json
@@ -37,6 +37,7 @@
     "ioredis": "^5.4.1",
     "movement-gaming-model": "file:../model",
     "mysql2": "^3.10.3",
+    "nanoid": "3",
     "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
