--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd api && node dist/main.js",
     "start:keeper": "cd keeper && node dist/main"
   },
   "author": "",
