--- a/api/config/config.local.yaml
+++ b/api/config/config.local.yaml
@@ -67,6 +67,29 @@ invitation:
   targetRewardCoinsStep: 10
   targetRewardPlaysStep: 1
 
+task:
+  list:
+    - taskId: 1
+      taskName: Follow Rize Twitter
+      taskLink: https://twitter.com/RIZE_Fi
+      rewardCoins: 0
+      rewardPlays: 1
+    - taskId: 2
+      taskName: Join Rize Telegram Announcement
+      taskLink: https://t.me/RIZE_Fi
+      rewardCoins: 0
+      rewardPlays: 1
+    - taskId: 3
+      taskName: Join Rize Telegram Channel
+      taskLink: https://t.me/RIZEFI_Official
+      rewardCoins: 0
+      rewardPlays: 1
+    - taskId: 4
+      taskName: Check out Rize Galxe
+      taskLink: https://app.galxe.com/
+      rewardCoins: 0
+      rewardPlays: 1
+
 monitoring:
   metricsNamespace: Movement-gaming
   region: us-west-1
