--- a/keeper/package.json
+++ b/keeper/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.1.0",
     "@nestjs/typeorm": "^10.0.2",
+    "axios": "^1.7.2",
     "bignumber.js": "^9.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
