--- a/.github/workflows/keeper_deploy.yaml
+++ b/.github/workflows/keeper_deploy.yaml
@@ -80,14 +80,19 @@ jobs:
               aws ecr get-login-password --region us-west-1 | docker login --username AWS --password-stdin $ECR_REGISTRY
               echo "final: \$ECR_REGISTRY/\$ECR_REPOSITORY:\$IMAGE_TAG \$INSTANCE_NUM"
               docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            
+              echo "Starting for loop with INSTANCE_NUM=\$INSTANCE_NUM"
               for ((i=1;i<=$INSTANCE_NUM;i++); do
+                echo "Inside for loop, iteration \$i"
                 INSTANCE_NAME="${ECR_REPOSITORY}_${i}"
-                echo "Stopping and removing instance $INSTANCE_NAME if exists..."
+                echo "Stopping and removing instance \$INSTANCE_NAME if exists..."
                 docker stop $INSTANCE_NAME || true
                 docker rm $INSTANCE_NAME || true
-                echo "Running instance $INSTANCE_NAME..."
+                echo "Running instance \$INSTANCE_NAME..."
                 docker run -dit --name $INSTANCE_NAME --log-opt max-size=50m --log-opt max-file=2 --restart unless-stopped -e INSTANCE_ID=$i $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
               done
+              echo "For loop completed"
+            
               docker system prune -fa
               docker image prune -af
             EOF
