--- a/.github/workflows/keeper_deploy.yaml
+++ b/.github/workflows/keeper_deploy.yaml
@@ -81,9 +81,7 @@ jobs:
               echo "final: \$ECR_REGISTRY/\$ECR_REPOSITORY:\$IMAGE_TAG \$INSTANCE_NUM"
               docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
             
-              echo "Starting for loop with INSTANCE_NUM=\$INSTANCE_NUM"
-              for ((i=1;i<=\$INSTANCE_NUM;i++); do
-                echo "Inside for loop, iteration \$i"
+              for ((i=1; i<=$INSTANCE_NUM; i++)); do
                 INSTANCE_NAME="${ECR_REPOSITORY}_${i}"
                 echo "Stopping and removing instance \$INSTANCE_NAME if exists..."
                 docker stop $INSTANCE_NAME || true
