--- a/.github/workflows/keeper_deploy.yaml
+++ b/.github/workflows/keeper_deploy.yaml
@@ -84,12 +84,11 @@ jobs:
               for ((i=1; i<=$INSTANCE_NUM; i++)); do
                 INSTANCE_NAME="\${ECR_REPOSITORY}_\${i}"
                 echo "Stopping and removing instance \$INSTANCE_NAME if exists..."
-                docker stop $INSTANCE_NAME || true
-                docker rm $INSTANCE_NAME || true
+                docker stop \$INSTANCE_NAME || true
+                docker rm \$INSTANCE_NAME || true
                 echo "Running instance \$INSTANCE_NAME..."
-                docker run -dit --name $INSTANCE_NAME --log-opt max-size=50m --log-opt max-file=2 --restart unless-stopped -e INSTANCE_ID=$i $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+                docker run -dit --name \$INSTANCE_NAME --log-opt max-size=50m --log-opt max-file=2 --restart unless-stopped -e INSTANCE_ID=$i $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
               done
-              echo "For loop completed"
             
               docker system prune -fa
               docker image prune -af
