--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "@aptos-labs/ts-sdk": "^1.26.0",
     "@aws-sdk/client-cloudwatch": "^3.616.0",
     "@aws-sdk/client-secrets-manager": "^3.529.1",
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
