--- a/api/config/config.release.yaml
+++ b/api/config/config.release.yaml
@@ -141,3 +141,13 @@ admin:
   authToken:
     source: secret-manager
     value: movement-gaming-admin-auth-token-release
+
+galxe:
+  getAccessTokenUrl: https://api.galxe.com/oauth/auth/2/token
+  getUserInfoUrl: https://api.galxe.com/oauth/api/2/user?scope=Telegram EVMAddress
+  clientId:
+    source: secret-manager
+    value: galxe-momo-client-id
+  clientSecret:
+    source: secret-manager
+    value: galxe-momo-client-secret
