--- a/keeper/package.json
+++ b/keeper/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "class-validator-extended": "^4.0.0",
+    "crypto-js": "^4.2.0",
     "ioredis": "^5.4.1",
     "movement-gaming-model": "file:../model",
     "mysql2": "^3.10.3",
